--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
+    
     "build": "vite build",
-    "lint": "eslint \"src/**/*.js\"",
+    "lint": "eslint \"src/*/.js\"",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "server": "json-server --watch ./src/Api/db.json --port 5000"
   },
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
@@ -30,6 +32,7 @@
     "chart.js": "^4.4.4",
     "classnames": "^2.5.1",
     "core-js": "^3.38.1",
+    "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
